# jukeboy

./: .gitignore  CMakeLists.txt  convert_to_raw.py  flash_factory.py  flash_ota.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old  sdkconfig.factory  sdkconfig.factory.old  sdkconfig.ota  test.py
.github/prompts/: plan-firmwareBugfixStabilization.prompt.md
bootloader_components/main/: CMakeLists.txt  bootloader_start.c
components/bt/: CMakeLists.txt
components/esp-idf-ftpServer/: CMakeLists.txt
components/espressif__cmake_utilities/: gen_single_bin.cmake  package_manager.cmake
components/espressif__extended_vfs/: .component_hash  CHECKSUMS.json  CMakeLists.txt
components/espressif__wasmachine_core/: .component_hash  CHECKSUMS.json  CMakeLists.txt  Kconfig.projbuild  Kconfig.wasmachine  idf_component.yml
components/espressif__wasmachine_data_sequence/: .component_hash  CHECKSUMS.json  idf_component.yml
components/espressif__wasmachine_ext_wasm_native/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/espressif__wasmachine_ext_wasm_vfs/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/espressif__wasmachine_shell/: .component_hash  CHECKSUMS.json  idf_component.yml
components/mpy/: CMakeLists.txt  Kconfig  mpy.c
components/mpy/include/: mpy.h
components/mpy/micropython/: Makefile  README.md  micropython_embed.mk  mpconfigport.h
components/mpy/micropython/build-embed/: frozen_content.c
components/mpy/micropython/build-embed/frozen_mpy/asyncio/: stream.mpy
components/mpy/micropython/build-embed/genhdr/: moduledefs.collected  moduledefs.collected.hash  mpversion.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.generated.h  qstrdefs.preprocessed.h  root_pointers.collected  root_pointers.collected.hash
components/mpy/micropython/build-embed/genhdr/qstr/: @@__@@__py__compile.c.qstr  @@__@@__py__modbuiltins.c.qstr  @@__@@__py__modio.c.qstr  @@__@@__py__modsys.c.qstr  @@__@@__py__objarray.c.qstr  @@__@@__py__objexcept.c.qstr  @@__@@__py__objgenerator.c.qstr  @@__@@__py__objstr.c.qstr  @@__@@__py__objtype.c.qstr
components/mpy/micropython/micropython_embed/genhdr/: moduledefs.h  root_pointers.h
components/mpy/micropython/micropython_embed/port/: builtin_format.c  embed_util.c  lexer_port.c  micropython_embed.h  modtime_embed.c  mpconfigport_common.h  mphalport.c
docs/: A2DP_CONFIGURATION.md  A2DP_INTEGRATION.md  architecture.md  companion_api.md  jukeboy_formats.md  qemu_fork.md  scripting.md
flashfs/scripts/: README.txt
include/: BackgroundAudioRAW.h  ESP32I2SAudio.h  factory_app.h  macros.h  ota_app.h  pindef.h  pindef_ulp.h  sys_mgr.h
main/: CMakeLists.txt  Kconfig.projbuild  a2dp_coprocessor_service.c  a2dp_coprocessor_service.h  audio_output_switch.c  audio_output_switch.h  bluetooth_service.c  bluetooth_service.h  cartridge_service.c  cartridge_service.h  companion_api_service.c  companion_api_service.h  console_service.c  console_service.h  display_framebuffer.c  display_framebuffer.h  display_service.c  display_service.h  display_service_old.c  esp_flash_dispatcher.c  esp_flash_dispatcher.h  ftp_service.c  ftp_service.h  hid_service.c  hid_service.h  i2s_service.c  idf_component.yml  jukeboy_formats.h  lastfm_service.c  lastfm_service.h  main.c  pin_defs.h  play_history_service.c  play_history_service.h  player_service.c  player_service.h  power_mgmt_service.c  power_mgmt_service.h  qemu_openeth_service.c  qemu_openeth_service.h  (+14 more)
main/ui/: ui.c  ui.h
main/ui/components/: page_indicator.c  page_indicator.h  status_bar.c  status_bar.h
main/ui/screens/: screen_now_playing.c  screen_now_playing.h  screen_stub.c  screen_stub.h
main/ulp/: ulp_hid.S
need_refactor/: audio_player.cpp  esp_now_handler.h  web_server.cpp  web_server.h
service/bluetooth_service/: CMakeLists.txt  bluetooth_service.c
service/cartridge_service/: CMakeLists.txt  cartridge_service.c
service/console_service/: CMakeLists.txt  console_service.c
service/i2s_service/: CMakeLists.txt  i2s_service.c
service/player_service/: CMakeLists.txt  player_service.c
service/wifi_service/: CMakeLists.txt
src/: CMakeLists.txt  adpcm_decoder.c  adpcm_decoder.h  audio_player.cpp  audio_player.h  dummy_data.h  main.c  main.cpp  main.cpp.bak  ota_app.c  ota_app.c.bak  storage_man.h  storage_struct.h  structs.cpp  structs.h  sys_mgr.c
src/audio/: A2DP_README.md  a2dp_source.c  a2dp_source.h  a2dp_source_example.c  adpcm_decoder.h  audio_internals.h  audio_player.c  audio_player.cpp  audio_player.h
src/hid/: hid_event_system.c  hid_event_system.h  hid_mgr.c  hid_mgr.h  led_animations.c  led_animations.h  led_mgr.c  led_mgr.h  power_mgr.c  power_mgr.h
src/recovery/: ble_serv.c  ble_serv.h  factory_app.c  part_mgr.c  part_mgr.h
src/utils/: macros.h  profile.c  profile.h  serial_interface.c  serial_interface.cpp  serial_interface.h
tj_web_control_panel/: README.md  package.json
tools/: build_coremark.py  clone_build_qemu.py  companion.py  encoder.c  ensure_sd_image.py  flash_littlefs.cmd  gen_album_files.py  make_album.py  parser.py  run_qemu_firmware.py
tools/wasm-sdk/: Cargo.toml  README.md  rust-toolchain.toml
tools/wasm-sdk/.cargo/: config.toml
tools/wasm-sdk/examples/google-get/: Cargo.toml
tools/wasm-sdk/examples/google-get/src/: main.rs
tools/wasm-sdk/examples/hello/: Cargo.toml
tools/wasm-sdk/examples/hello/src/: main.rs
tools/wasm-sdk/examples/hid-demo/: Cargo.toml
tools/wasm-sdk/examples/hid-demo/src/: main.rs
tools/wasm-sdk/examples/net-echo/: Cargo.toml
tools/wasm-sdk/examples/net-echo/src/: main.rs
tools/wasm-sdk/examples/player-control/: Cargo.toml
tools/wasm-sdk/examples/player-control/src/: main.rs
tools/wasm-sdk/jukeboy/: Cargo.toml
tools/wasm-sdk/jukeboy-net/: Cargo.toml
tools/wasm-sdk/jukeboy-net/src/: addr.rs  error.rs  lib.rs  sys.rs  tcp.rs  udp.rs
tools/wasm-sdk/jukeboy-sys/: Cargo.toml
tools/wasm-sdk/jukeboy-sys/src/: lib.rs
tools/wasm-sdk/jukeboy/src/: lib.rs  rt.rs
ulp/: ulp.S
(+25 files in other folders)
