[workspace]
members = [
    "jukeboy-sys",
    "jukeboy",
    "jukeboy-net",
    "examples/hello",
    "examples/google-get",
    "examples/player-control",
    "examples/net-echo",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
