[workspace]
members = [
    "jukeboy-sys",
    "jukeboy",
    "jukeboy-net",
    "examples/hello",
    "examples/google-get",
    "examples/player-control",
    "examples/net-echo",
    "examples/hid-demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }
ufmt = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
