[package]
name = "google-get"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "google-get"
path = "src/main.rs"
test = false

[dependencies]
jukeboy = { path = "../../jukeboy" }
jukeboy-net = { path = "../../jukeboy-net" }
ufmt = { workspace = true }
